Minor UI/UX adjustments

--- a/src/app/allstores/allstores.component.html
+++ b/src/app/allstores/allstores.component.html
@@ -10,13 +10,13 @@
     <div class="main-container">
 
         <div class="navbar">
-            <a href="">Home</a>
-            <a href="">Login</a>
-            <a href="">Register</a>
+            <a routerLink="/home">Home</a>
+            <a routerLink="/login">Login</a>
+            <a routerLink="/profile">Profile</a>
             <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
-            <a href="">Cart</a>
-            <a href="">Profile</a>
-            <a href="">Logout</a>
+            <a routerLink="/cart">Cart</a>
+            <a routerLink="/orders">Orders</a>
+            <a routerLink="/login">Logout</a>
         </div>
 
         <div class="header-text-image-container">
@@ -33,43 +33,43 @@
         <h1>All Stores</h1>
 
         <div class="stores-container">
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Puregold Olongapo</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Jelebee Supermart</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Store</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Store</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Store</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Puregold Olongapo</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Jelebee Supermart</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Store</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Store</p>
             </div>
-            <div class="store-card">
+            <div class="store-card" routerLink="/store">
                 <img src="../../assets/images/store.png">
                 <p>Store</p>
             </div>
