--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -20,10 +20,14 @@ a {
 
 .navbar a {
     color: black;
+    border-radius: 10px;
+    background-color: white;
+    padding: 1rem;
 }
 
 .navbar a:hover {
-    color: forestgreen;
+    background-color: forestgreen;
+    color: white;
 }
 
 .header-text-image-container {
@@ -55,15 +59,6 @@ a {
     max-width: 50%;
     height: auto;
     /* border: 1px solid red; */
-}
-
-.checkout-btn {
-    border-radius: 3rem;
-    background-color: forestgreen;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .products-container {
