--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,10 +21,14 @@ a {
 
 .navbar a {
     color: black;
+    border-radius: 10px;
+    background-color: white;
+    padding: 1rem;
 }
 
 .navbar a:hover {
-    color: forestgreen;
+    background-color: forestgreen;
+    color: white;
 }
 
 .header-text-image-container {
@@ -60,6 +64,14 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.checkout-btn p {
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .checkout-btn:hover {
