--- a/src/app/orders/orders.component.css
+++ b/src/app/orders/orders.component.css
@@ -20,10 +20,14 @@ a {
 
 .navbar a {
     color: black;
+    border-radius: 10px;
+    background-color: white;
+    padding: 1rem;
 }
 
 .navbar a:hover {
-    color: forestgreen;
+    background-color: forestgreen;
+    color: white;
 }
 
 .header-text-image-container {
