--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,13 +10,13 @@
     <div class="main-container">
 
         <div class="navbar">
-            <a href="">Home</a>
-            <a href="">Login</a>
-            <a href="">Register</a>
+            <a routerLink="/home">Home</a>
+            <a routerLink="/login">Login</a>
+            <a routerLink="/profile">Profile</a>
             <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
-            <a href="">Cart</a>
-            <a href="">Profile</a>
-            <a href="">Logout</a>
+            <a routerLink="/cart">Cart</a>
+            <a routerLink="/orders">Orders</a>
+            <a routerLink="/login">Logout</a>
         </div>
 
         <div class="header-text-image-container">
@@ -24,7 +24,7 @@
                 <h1>Juan Dela Cruz</h1>
                 <h2>Take a look at your profile details here.</h2>
 
-                <div class="checkout-btn">
+                <div class="checkout-btn" routerLink="/chooseupdate">
                     <p>Update Profile</p>
                 </div>
             </div>
