--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,13 +11,17 @@
     <div class="main-container">
 
         <div class="navbar">
-            <a routerLink="/home">Home</a>
-            <a routerLink="/login">Login</a>
-            <a routerLink="/profile">Profile</a>
+            <div class="navbar-firsthalf">
+                <a routerLink="/home">Home</a>
+                <a routerLink="/login">Login</a>
+                <a routerLink="/profile">Profile</a>
+            </div>
             <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
-            <a routerLink="/cart">Cart</a>
-            <a routerLink="/orders">Orders</a>
-            <a routerLink="/login">Logout</a>
+            <div class="navbar-secondhalf">
+                <a routerLink="/cart">Cart</a>
+                <a routerLink="/orders">Orders</a>
+                <a routerLink="/login">Logout</a>
+            </div>
         </div>
 
         <div class="header-text-image-container">
