Added register page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
                 <div class="otherlogin-options">
                     <p><a href="">Forgot Password</a></p>
                     <p>|</p>
-                    <p><a href=""> Sign up here</a></p>
+                    <p><a routerLink="/register"> Sign up here</a></p>
                 </div>
             </div>
         </div>
