--- a/src/app/chooseupdateprofile/chooseupdateprofile.component.html
+++ b/src/app/chooseupdateprofile/chooseupdateprofile.component.html
@@ -15,7 +15,7 @@
                 <a routerLink="/profile">Profile</a>
                 <a *ngIf="loginState == false" routerLink="/login">Login</a>
             </div>
-            <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
+            <img routerLink="/" src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
             <div class="navbar-secondhalf">
                 <a routerLink="/cart">Cart</a>
                 <a routerLink="/orders">Orders</a>
