--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,8 +1,3 @@
-a {
-    text-decoration: none;
-    color: black;
-}
-
 .main-container {
     max-width: 56.25rem;
     /* border: 1px solid red; */
@@ -10,53 +5,20 @@ a {
     margin: 0 auto;
 }
 
-.navbar {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    justify-content: space-evenly;
-    max-width: 56.25rem;
-    margin: 0 auto;
-    padding: 1rem;
-    /* border: 1px solid red; */
-}
-
-.colored-bar {
-    background-color: rgb(34, 139, 34, 0.3);
-    width: 100%;
-}
-
-.navbar a {
-    color: dimgray;
-    border-radius: 10px;
-    padding: 1rem;
-    font-size: 1.25rem;
-}
-
-.navbar-firsthalf, .navbar-secondhalf {
-    display: flex;
-    justify-content: space-evenly;
-    gap: 1rem;
-}
-
-.navbar-firsthalf, .navbar-secondhalf{
-    flex: 1;
-}
-
-.navbar a:hover {
-    background-color: forestgreen;
-    color: white;
-}
-
 .header-text-image-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     /* border: 1px solid red; */
     gap: 1rem;
 }
 
 .header-text h2 {
     margin-top: -1.563rem;
+}
+
+.termscbox {
+    margin-bottom: 1rem;
 }
 
 .header-image {
@@ -91,14 +53,31 @@ a {
 .input-container {
     display: flex;
     gap: 1rem;
-    flex-wrap: wrap;
 }
 
-input, select {
+.input-container input {
     background-color: whitesmoke;
     border: 1px solid whitesmoke;
     border-radius: 3.125rem;
-    padding: 1.5rem;
+    padding: 1rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+    letter-spacing: 0.031rem;
+    margin: 0 auto;
+    min-width: 0;
+}
+
+.address-input-container {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.address-input-container input, select {
+    background-color: whitesmoke;
+    border: 1px solid whitesmoke;
+    border-radius: 3.125rem;
+    padding: 1rem;
     font-size: 1.25rem;
     font-weight: 600;
     letter-spacing: 0.031rem;
@@ -106,11 +85,16 @@ input, select {
     flex-grow: 1;
 }
 
+
 input:focus, select:focus {
     outline: none !important;
 }
 
-@media (max-width: 46.875rem) { 
+.checkbox input[type=checkbox]:checked{
+    background-color: forestgreen; 
+}
+
+@media (max-width: 46.875rem) {
     .navbar, .header-text-image-container {
         display: flex;
         flex-direction: column;
@@ -131,3 +115,4 @@ input:focus, select:focus {
         width: 100%;
     }
 }
+
