--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,42 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-
-    <div class="colored-bar">
-        <div class="navbar">
-            <div class="navbar-firsthalf">
-                <a routerLink="/">Home</a>
-                <a routerLink="/profile">Profile</a>
-                <a *ngIf="loginState == false" routerLink="/login">Login</a>
-            </div>
-            <img routerLink="/" src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
-            <div class="navbar-secondhalf">
-                <a routerLink="/cart">Cart</a>
-                <a routerLink="/orders">Orders</a>
-                <a *ngIf="loginState == true" routerLink="/login">Logout</a>
-            </div>
-        </div>
-    </div>
-
     <div class="main-container">
-
         <div class="header-text-image-container">
             <div class="header-text">
-                <h1>Update Address</h1>
-                <h2>Moved out to a new location? Apply changes to your current address here.</h2>
+                <h1>Register to Go-cery</h1>
+                <h2>Become a member of the Go-cery family by filling in the form below.</h2>
+
+                <div class="termscbox">
+                    <input type="checkbox" name="termscbox">
+                    <label for="termscbox">I agree to the terms and conditions and privacy policy of Go-cery</label><br>
+                </div>
 
                 <div class="checkout-btn">
-                    <p>Save Changes</p>
+                    <p>Get OTP & Finish Registration</p>
                 </div>
             </div>
             <div class="header-image-container">
-                <img class="header-image" src="../../assets/images/textfield.png">
+                <img class="header-image" src="../../assets/images/Form.png">
             </div>
         </div>
 
-        <h1>Address Information</h1>
+        <h1>Name</h1>
 
         <div class="input-container">
+            <input type="text" placeholder="First Name">
+            <input type="text" placeholder="Middle Name">
+            <input type="text" placeholder="Last Name">
+        </div>
+
+        <h1>Address</h1>
+
+        <div class="address-input-container">
             <input type="text" placeholder="House Number">
             <input type="text" placeholder="Street">
             <select name="cars" id="cars">
@@ -67,7 +62,22 @@
             <input type="text" placeholder="Province">
         </div>
 
+        <h1>Contact Information</h1>
 
+        <div class="address-input-container">
+            <input type="text" placeholder="Contact Number">
+            <input type="email" placeholder="Email Address">
+        </div>
+
+        <h1>Credentials</h1>
+
+        <div class="input-container">
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+            <input type="text" placeholder="OTP">
+        </div>
     </div>
+
+    
 </body>
 </html>
