--- a/src/app/updatename/updatename.component.css
+++ b/src/app/updatename/updatename.component.css
@@ -72,6 +72,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .checkout-btn:hover {
@@ -101,6 +102,7 @@ input {
     font-weight: 600;
     letter-spacing: 0.031rem;
     margin: 0 auto;
+    min-width: 0;
 }
 
 input:focus {
