--- a/src/app/fullproductinfo/fullproductinfo.component.html
+++ b/src/app/fullproductinfo/fullproductinfo.component.html
@@ -11,38 +11,38 @@
     <div class="colored-bar">
         <div class="navbar">
             <div class="navbar-firsthalf">
-                <a routerLink="/">Home</a>
+                <a routerLink="/home">Home</a>
                 <a routerLink="/profile">Profile</a>
-                <a *ngIf="loginState == false" routerLink="/login">Login</a>
+                <a *ngIf="loginState == false" routerLink="/">Login</a>
             </div>
-            <img routerLink="/" src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
+            <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0" routerLink="/home">
             <div class="navbar-secondhalf">
                 <a routerLink="/cart">Cart</a>
                 <a routerLink="/orders">Orders</a>
-                <a *ngIf="loginState == true" routerLink="/login">Logout</a>
+                <a *ngIf="loginState == true" routerLink="/">Logout</a>
             </div>
         </div>
     </div>
 
-    <div class="main-container">
+    <div class="main-container" *ngFor="let product of dt">
         <div class="header-text-image-container">
             <div class="header-text">
-                <h1>Colgate Family Toothpaste Triple Action Original Mint 175ML Twin Pack</h1>
+                <h1>{{ product.product_name }}</h1>
 
-                <div class="checkout-btn">
+                <div (click)="addToCart(product.product_id)" class="checkout-btn">
                     <p>Add to Cart</p>
                 </div>
 
             </div>
             <div class="header-image-container">
-                <img class="header-image" src="../../assets/images/tempfeatured-product.png">
+                <img class="header-image" src="{{ product.product_image }}">
             </div>
         </div>
 
         <h1>Description</h1>
 
         <div class="product-desc">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est deserunt porro illo molestias eos, officiis possimus incidunt similique magnam temporibus libero quos eligendi consequatur quod delectus, maxime cumque a consectetur!</p>
+            <p>{{ product.product_desc }}</p>
         </div>
     </div>
 
