--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,24 +11,25 @@
     <div class="colored-bar">
         <div class="navbar">
             <div class="navbar-firsthalf">
-                <a routerLink="/">Home</a>
+                <a routerLink="/home">Home</a>
                 <a routerLink="/profile">Profile</a>
-                <a *ngIf="loginState == false" routerLink="/login">Login</a>
+                <a *ngIf="loginState == false" routerLink="/">Login</a>
             </div>
-            <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0" routerLink="/">
+            <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0" routerLink="/home">
             <div class="navbar-secondhalf">
                 <a routerLink="/cart">Cart</a>
                 <a routerLink="/orders">Orders</a>
-                <a *ngIf="loginState == true" routerLink="/login">Logout</a>
+                <a *ngIf="loginState == true" routerLink="/">Logout</a>
             </div>
         </div>
     </div>
 
-    <div class="main-container" *ngFor="let data of dt">
+    <div class="main-container" >
 
         <div class="header-text-image-container">
             <div class="header-text">
-                <h1>Hello, {{ data.acc_fname }} <span *ngIf="data.acc_mname == ''"></span> <span *ngIf="data.acc_mname != ''">{{ data.acc_mname[0] }}.</span> {{ data.acc_lname}}</h1>
+                <h1 *ngFor="let data of dt">Hello, {{ data.acc_fname }} <span *ngIf="data.acc_mname == ''"></span> <span *ngIf="data.acc_mname != ''">{{ data.acc_mname[0] }}.</span> {{ data.acc_lname}}</h1>
+                
                 <h2>What would you like to buy today?</h2>
                 <div class="featured-product">
                     <img class="featured-product-image" src="../../assets/images/tempfeatured-product.png">
@@ -101,25 +102,9 @@
         <!-- <h1>Browse by Store</h1> -->
 
         <div class="stores-container">
-            <div class="store-card" routerLink="/store">
+            <div class="store-card" *ngFor="let store of stores | slice:0:4;" button (click)="gotoStore(store.store_id)">
                 <img src="../../assets/images/store.png">
-                <p>Puregold Olongapo</p>
-            </div>
-            <div class="store-card" routerLink="/store">
-                <img src="../../assets/images/store.png">
-                <p>Jelebee Supermart</p>
-            </div>
-            <div class="store-card" routerLink="/store">
-                <img src="../../assets/images/store.png">
-                <p>Store</p>
-            </div>
-            <div class="store-card" routerLink="/store">
-                <img src="../../assets/images/store.png">
-                <p>Store</p>
-            </div>
-            <div class="store-card" routerLink="/store">
-                <img src="../../assets/images/store.png">
-                <p>Store</p>
+                <p>{{ store.store_name }}</p>
             </div>
         </div>
 
