--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -18,7 +18,7 @@
                     <label for="termscbox">I agree to the terms and conditions and privacy policy of Go-cery</label><br>
                 </div>
 
-                <div class="checkout-btn">
+                <div (click)="register()" class="checkout-btn">
                     <p>Get OTP & Finish Registration</p>
                 </div>
             </div>
@@ -30,17 +30,18 @@
         <h1>Name</h1>
 
         <div class="input-container">
-            <input type="text" placeholder="First Name">
-            <input type="text" placeholder="Middle Name">
-            <input type="text" placeholder="Last Name">
+            <input [(ngModel)]="acc_fname" type="text" placeholder="First Name">
+            <input [(ngModel)]="acc_mname" type="text" placeholder="Middle Name">
+            <input [(ngModel)]="acc_lname" type="text" placeholder="Last Name">
         </div>
 
         <h1>Address</h1>
 
         <div class="address-input-container">
-            <input type="text" placeholder="House Number">
-            <input type="text" placeholder="Street">
-            <select name="cars" id="cars">
+            <input [(ngModel)]="acc_no" type="text" placeholder="House Number">
+            <input [(ngModel)]="acc_street" type="text" placeholder="Street">
+            <select [(ngModel)]="acc_barangay" name="cars" id="cars">
+                <option value="Barangay">Select Barangay</option>
                 <option value="Asinan">Asinan</option>
                 <option value="Banicain">Banicain</option>
                 <option value="Barretto">Barretto</option>
@@ -58,22 +59,22 @@
                 <option value="West Bajac-Bajac">West Bajac-Bajac</option>
                 <option value="West Tapinac">West Tapinac</option>
               </select>
-            <input type="text" placeholder="City">
-            <input type="text" placeholder="Province">
+            <input [(ngModel)]="acc_city" type="text" placeholder="City">
+            <input [(ngModel)]="acc_province" type="text" placeholder="Province">
         </div>
 
         <h1>Contact Information</h1>
 
         <div class="address-input-container">
-            <input type="text" placeholder="Contact Number">
-            <input type="email" placeholder="Email Address">
+            <input [(ngModel)]="acc_mobile" type="text" placeholder="Contact Number">
+            <input [(ngModel)]="acc_email" type="email" placeholder="Email Address">
         </div>
 
         <h1>Credentials</h1>
 
         <div class="input-container">
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
+            <input [(ngModel)]="acc_username" type="text" placeholder="Username">
+            <input [(ngModel)]="acc_password" type="password" placeholder="Password">
             <input type="text" placeholder="OTP">
         </div>
     </div>
