--- a/src/app/updatecontact/updatecontact.component.html
+++ b/src/app/updatecontact/updatecontact.component.html
@@ -11,15 +11,15 @@
     <div class="colored-bar">
         <div class="navbar">
             <div class="navbar-firsthalf">
-                <a routerLink="/">Home</a>
+                <a routerLink="/home">Home</a>
                 <a routerLink="/profile">Profile</a>
-                <a *ngIf="loginState == false" routerLink="/login">Login</a>
+                <a *ngIf="loginState == false" routerLink="/">Login</a>
             </div>
-            <img routerLink="/" src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0">
+            <img src="https://i.ibb.co/jk6RMrs/templogo.png" alt="templogo" border="0" routerLink="/home">
             <div class="navbar-secondhalf">
                 <a routerLink="/cart">Cart</a>
                 <a routerLink="/orders">Orders</a>
-                <a *ngIf="loginState == true" routerLink="/login">Logout</a>
+                <a *ngIf="loginState == true" routerLink="/">Logout</a>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
                 <h1>Update Contact</h1>
                 <h2>New mobile number? Apply changes to your contact number here.</h2>
 
-                <div class="checkout-btn">
+                <div (click)="submitForm()" class="checkout-btn">
                     <p>Save Changes</p>
                 </div>
             </div>
@@ -43,7 +43,9 @@
         <h1>Contact Information</h1>
 
         <div class="input-container">
-            <input type="text" placeholder="Contact Number">
+            <form [formGroup]="registrationForm" novalidate>
+                <input formControlName="acc_mobile" [(ngModel)]="acc_mobile" type="text" placeholder="Contact Number">
+            </form>
         </div>
 
 
